--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               <a class="btn lg:bg-gray-300 md:bg-gray-300 normal-case lg:text-xl md:text-xl">Sort by view</a>
             </div>
             <div class="navbar-end">                
-                <button class="btn hover:bg-red-600 btn-active bg-red-500 lg:text-lg text-white normal-case">Blog</button>                
+                <a href="./blog.html"><button class="btn hover:bg-red-600 btn-active bg-red-500 lg:text-lg text-white normal-case">Blog</button>                </a>
             </div>            
           </div>        
         <!-- navbar End -->          
@@ -40,7 +40,9 @@
         </section> 
 
     </main>
-    <footer></footer>
+    <footer>
+       <img src="" alt="">
+    </footer>
 
 
     <script src="app.js"></script>
