--- a/index.html
+++ b/index.html
@@ -37,7 +37,16 @@
             <div id="card-container" class="grid lg:grid-cols-4 md:grid-cols-2 grid-cols-1 gap-4">
              
             </div>    
-        </section> 
+        </section>
+        
+        <section>
+            <div id="no-data" class="text-center hidden m-14 ">
+                <div class="flex justify-center mb-6">
+                    <img src="./image/Icon.png" alt="">
+                </div>
+                <h3 class="text-2xl font-bold text-red-500">Oops!! Sorry, There is no <br> content here...</h3>
+            </div>
+        </section>
 
     </main>
     <footer>
