short by view added

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
               <img src="./image/Logo.png" alt="">
             </div>
             <div class="navbar-center ml-2">
-              <a onclick="handlerShort()" class="btn lg:bg-gray-300 md:bg-gray-300 normal-case lg:text-xl md:text-xl">Sort by view</a>
+              <a id="handleSortButton" class="btn lg:bg-gray-300 md:bg-gray-300 normal-case lg:text-xl md:text-xl">Sort by view</a>
             </div>
             <div class="navbar-end">                
                 <a href="./blog.html"><button class="btn hover:bg-red-600 btn-active bg-red-500 lg:text-lg text-white normal-case">Blog</button></a>
@@ -53,9 +53,6 @@
     <footer>
       
     </footer>
-
-
-
     <script src="app.js"></script>
     
 </body>
